浏览器检查更新

--- a/web_study/浏览器状态码详解.md
+++ b/web_study/浏览器状态码详解.md
@@ -34,7 +34,7 @@ POST：返回处理对应请求的结果。
 
 ## 3xx
 
-> 3XX 响应结果表明浏览器需要执行某些特殊的处理以完成请求
+> 3XX 响应结果表明浏览器需要执行某些特殊的处理以完成请求(重定向)
 
 ### 301 Movied Permanently
 永久性重定向。该状态码表示请求的资源已经被分配了新的URI，并且以后使用资源现在所指的URI。并且根据请求的方法有不同的处理方式：
@@ -69,7 +69,7 @@ Note: Many pre-HTTP/1.1 user agents do not understand the 303 status. When inter
 临时重定向。该状态码与302和303的有着类似的含义，不同之处在于，307状态码并不会指定客户端要用什么样的请求方法请求重定向地址。(302指定使用原有请求方法，303指定使用GET方法)
 
 ## 4xx Client Error
-> 4XX 的响应结果表明客户端是发生错误的原因所在
+> 4XX 的响应结果表明客户端是发生错误的原因所在--请求错误（客户端）
 
 ### 400 Bad Request
 表示该请求报文中存在语法错误，导致服务器无法理解该请求。客户端需要修改请求的内容后再次发送请求。
@@ -86,7 +86,7 @@ Note: Many pre-HTTP/1.1 user agents do not understand the 303 status. When inter
 ### 404 Not Found
 该状态码表明服务器上无法找到指定的资源。通常被用于服务器不想透露拒绝请求的原因，或者没有其他的响应可提供。
 ### 5XX Server Error
-> 5XX 的响应结果表明服务器本身发生错误，或者没有足够的能力来处理请求。
+> 5XX 的响应结果表明服务器本身发生错误，或者没有足够的能力来处理请求。--请求异常（服务器端）
 
 ### 500 Internal Server Error
 该状态码表明服务器端在执行请求时发生了错误。也有可能是Web应用存在的BUG或某些临时的故障。
